fixed homepage small-notes; fixed search results on IE7
git-svn-id: http://svn.localprojects.net/gam2@695 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/ie/tc.gam.ie7.css
+++ b/trunk/static/css/ie/tc.gam.ie7.css
@@ -51,6 +51,9 @@ ul.navbar li.search input[type=submit] { padding-left: 0; padding-right: 0;  }
 .continent.search-results .headlands { z-index: 98; }
 .continent.search-results div.location-hood-list {z-index:100 !important;}
 .continent.search-results #map-view .results-box { margin-top: 15px; }
+.continent.search-results #list-view.all tr.hidden-result { display: none !important; }
+.continent.search-results #list-view.projects tr.hidden-result { display: block !important; }
+.continent.search-results #list-view.resources tr.hidden-result { display: block !important; }
 
 /* admin/cms */
 .continent.cms-admin-settings table.active-admins-table label { width: 100%; }
