--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -613,6 +613,7 @@ OTHER GLOBAL ELEMENTS
 .note-card cite, .note-card-splash cite,
 .note-card blockquote, .note-card-splash blockquote { margin-bottom: 8px; font-style: normal; font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; display: block; }
 .note-card cite, .note-card blockquote { font-size: 16px; line-height: 22px;  }
+.note-card-splash em { font-style: normal; }
 .note-card textarea { overflow:hidden; margin-left:15px; width:160px; height:100%; border:0; background-color:transparent; }
 .note-card cite.note-meta-ft, .note-card-splash cite.note-meta-ft { font-size: 10px; line-height: 14px; font-style: italic; }
 .note-card cite.note-meta-ft strong, .note-card-splash cite.note-meta-ft strong { font-style: normal; font-weight: bold; }
@@ -1216,6 +1217,7 @@ div.continent.home div.project-cards div.endorser-thumb .overlay-tag { display: 
 	background-image: -moz-linear-gradient(left top,rgba(255,255,255,0) 60%,rgba(255,255,255,0.6) 100%);}
 .small-note cite,
 .small-note blockquote { display: block; margin: 2px 3px 0; overflow: hidden; }
+.small-note em { font-style: normal; }
 .small-note.a1 { background-position:   0px    0px;}
 .small-note.a2 { background-position: -45px    0px;}
 .small-note.a3 { background-position: -90px    0px;}
